--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@hookform/resolvers": "^2.3.0",
+    "@tanstack/react-query-devtools": "^4.29.6",
     "axios": "0.21.1",
     "faunadb": "^4.1.3",
     "framer-motion": "^4",
@@ -55,6 +56,6 @@
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "react-test-renderer": "17.0.2",
-    "typescript": "^4.2.3"
+    "typescript": "^4.9.5"
   }
 }
